k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dob-facts-app
  labels:
    name: dob-facts-app
